--- a/Hello world/css/styleQ.css
+++ b/Hello world/css/styleQ.css
@@ -195,3 +195,22 @@ background: white;
 border: 1px solid;
 color: black;
 }
+
+#up table {
+  border-collapse: collapse;
+}
+#up table td,table th {
+  border: 1px solid #000;
+}
+/* #up table tr:first-child th {
+  border-top: 0;
+}
+#up table tr:last-child td {
+  border-bottom: 0;
+}
+#up table tr td:first-child, table tr th:first-child {
+  border-left: 0;
+}
+#up table tr td:last-child, table tr th:last-child {
+  border-right: 0;
+} */
