--- a/Hello world/css/exam_style.css
+++ b/Hello world/css/exam_style.css
@@ -6,7 +6,6 @@ body {
     font-size: 60px;
     font-weight: bold;
     text-align: right;
-    margin-bottom: 3px;
     margin-top: 70px;
 }
 
@@ -31,6 +30,7 @@ body {
     margin-left: 100px;
     height: fit-content;
     margin-bottom: 10px;
+    margin-top: 50px;
 }
 
 #error{
