--- a/Hello world/css/admin_dash.css
+++ b/Hello world/css/admin_dash.css
@@ -1,42 +1,49 @@
-/* Googlefont Poppins CDN Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-.sidebar{
+
+.sidebar {
   position: fixed;
   height: 100%;
   width: 240px;
-  background: #0A2558;
+  background: #0a2558;
   transition: all 0.5s ease;
 }
-.sidebar.active{
+
+.sidebar.active {
   width: 60px;
 }
-.sidebar .logo-details{
+
+.sidebar .logo-details {
   height: 80px;
   display: flex;
   align-items: center;
 }
-.sidebar .logo-details img{
-  width:80px;
+
+.sidebar .logo-details img {
+  width: 80px;
   height: 80px;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
-.sidebar .nav-links{
+
+.sidebar .nav-links {
   margin-top: 10px;
 }
-.sidebar .nav-links li{
+
+.sidebar .nav-links li {
   position: relative;
   list-style: none;
   height: 50px;
 }
-.sidebar .nav-links li a{
+
+.sidebar .nav-links li a {
   height: 100%;
   width: 100%;
   display: flex;
@@ -44,30 +51,36 @@
   text-decoration: none;
   transition: all 0.4s ease;
 }
-.sidebar .nav-links li a.active{
-  background: #081D45;
+
+.sidebar .nav-links li a.active {
+  background: #081d45;
 }
-.sidebar .nav-links li a:hover{
-  background: #081D45;
+
+.sidebar .nav-links li a:hover {
+  background: #081d45;
 }
-.sidebar .nav-links li i{
+
+.sidebar .nav-links li i {
   min-width: 60px;
   text-align: center;
   font-size: 18px;
   color: #fff;
 }
-.sidebar .nav-links li a .links_name{
+
+.sidebar .nav-links li a .links_name {
   color: #fff;
   font-size: 15px;
   font-weight: 400;
   white-space: nowrap;
 }
-.sidebar .nav-links .log_out{
+
+.sidebar .nav-links .log_out {
   position: absolute;
   bottom: 0;
   width: 100%;
 }
-.home-section{
+
+.home-section {
   position: relative;
   background: #f5f5f5;
   min-height: 100vh;
@@ -75,11 +88,13 @@
   left: 240px;
   transition: all 0.5s ease;
 }
-.sidebar.active ~ .home-section{
+
+.sidebar.active~.home-section {
   width: calc(100% - 60px);
   left: 60px;
 }
-.home-section nav{
+
+.home-section nav {
   display: flex;
   justify-content: space-between;
   height: 80px;
@@ -94,25 +109,30 @@
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   transition: all 0.5s ease;
 }
-.sidebar.active ~ .home-section nav{
+
+.sidebar.active~.home-section nav {
   left: 60px;
   width: calc(100% - 60px);
 }
-.home-section nav .sidebar-button{
+
+.home-section nav .sidebar-button {
   display: flex;
   align-items: center;
   font-size: 24px;
   font-weight: 500;
 }
-nav .sidebar-button i{
+
+nav .sidebar-button i {
   font-size: 35px;
   margin-right: 10px;
 }
-.home-section .home-content{
+
+.home-section .home-content {
   position: relative;
   padding-top: 104px;
 }
-.home-content .overview-boxes{
+
+.home-content .overview-boxes {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -120,23 +140,68 @@ nav .sidebar-button i{
   padding: 0 20px;
   margin-bottom: 26px;
 }
-.overview-boxes .box{
+
+.overview-boxes .box {
   display: flex;
+  background-color: #f5f5f5;
   align-items: center;
   justify-content: center;
   width: calc(100% / 4 - 15px);
   background: #fff;
   padding: 15px 14px;
   border-radius: 12px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  margin: 5px;
+  border: 1px solid #ddd;
 }
-.overview-boxes .box-topic{
+
+.overview-boxes .box-topic {
   font-size: 20px;
   font-weight: 500;
 }
-.home-content .box .number{
+
+.home-content .box .number {
   display: inline-block;
   font-size: 35px;
   margin-top: -6px;
   font-weight: 500;
+}
+
+.box:hover {
+  background-color: #ddd;
+}
+
+.right-side {
+  padding: 10px;
+  margin: 10px;
+  border: none;
+  transition: all 0.2s ease-in-out;
+}
+
+.box:nth-child(1) {
+  background-color: #f8d7da;
+}
+
+.box:nth-child(2) {
+  background-color: #d4edda;
+}
+
+.box:nth-child(3) {
+  background-color: #cce5ff;
+}
+
+.box:nth-child(4) {
+  background-color: #fff3cd;
+}
+
+.box:hover .right-side {
+  transform: scale(1.1);
+}
+
+#logo_name{
+  color: #fff; 
+  font-size: 24px; 
+  font-weight: 500;
+  text-align: center;
+  padding: 5px;
 }
