--- a/Hello world/css/exam.css
+++ b/Hello world/css/exam.css
@@ -2,20 +2,20 @@
     overflow-x: hidden;
 }
 
-#view h3{
+#view h3 {
     font-size: 38px;
     text-align: center;
     color: red;
     margin-top: 200px;
 }
 
-#view h4{
+#view h4 {
     font-size: 28px;
     text-align: center;
     margin-top: -150px;
 }
 
-#view a{
+#view a {
     text-decoration: none;
     border: none;
     outline: none;
@@ -30,67 +30,75 @@
     font-size: 25px;
 }
 
-#view a:hover{
+#view a:hover {
     background: white;
     border: 1px solid;
     color: black
 }
 
-.row{
+#view .row{
+    background: white;
+    border-radius: 0px;
+    box-shadow: none;
+}
+
+.row {
     background: white;
     border-radius: 30px;
     box-shadow: 12px 12px 22px black;
 }
-.container{
+
+.container {
     width: 850px;
     height: 900px;
     margin-top: 20px;
 }
 
-.rule{
+.rule {
     padding: 9px;
     margin: 5px;
 }
-.rule h4{
+
+.rule h4 {
     text-align: center;
     font-weight: bold;
     margin-top: 20px;
     line-height: 40px;
 }
 
-.rule h5{
-    margin-top:35px;
+.rule h5 {
+    margin-top: 35px;
     margin-left: 500px;
     font-weight: bold;
     line-height: 40px;
 }
 
-.rule h6{
-    margin-top:35px;
+.rule h6 {
+    margin-top: 35px;
     font-weight: bold;
     font-size: 20px;
     margin-left: 35px;
     line-height: 40px;
 }
 
-.rule p{
-    margin-top:10px;
-    margin-left:25px;
+.rule p {
+    margin-top: 10px;
+    margin-left: 25px;
     margin-right: 25px;
     text-align: justify;
     font-size: 20px;
     line-height: 40px;
 }
 
-.rule span{
+.rule span {
     font-weight: bolder;
 }
 
-.rule a{
+.rule a {
     text-decoration: none;
     border: none;
     outline: none;
-    height: 60px;
+    height: 40px;
     width: 130px;
     background-color: #454868;
     color: white;
@@ -100,11 +108,11 @@
     margin-left: 280px;
     text-align: center;
     font-size: 25px;
-    padding:7px;
+    padding: 7px;
     margin-bottom: 25px;
 }
 
-.rule a:hover{
+.rule a:hover {
     background: white;
     border: 1px solid;
     color: black
