--- a/Hello world/css/log.css
+++ b/Hello world/css/log.css
@@ -1,44 +1,80 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-.row{
+
+.row {
     background: white;
     border-radius: 30px;
     box-shadow: 12px 12px 22px black;
+    width: 700px;
+    height: 550px;
+    margin-left: 280px;
+    margin-top: 60px;
 }
-img{
+
+img {
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
 }
-.logo{
-    margin-left: 190px;
-    margin-top: 30px;
+
+.logo {
+    margin-left: 230px;
+    margin-top: 20px;
 }
-.font-weight-bold{
+
+.form-row{
+    margin-left: 120px;
+    padding: 1px;
+    width: 550px;
+}
+
+.font-weight-bold {
     text-align: center;
 }
-.btn1{
+
+.btn1 {
     border: none;
     outline: none;
-    height: 50px;
-    width:100%;
+    height: 40px;
+    width: 60%;
     background-color: #454868;
     color: white;
     border-radius: 4px;
     font-weight: bold;
+    padding: 1px;
+    margin-left: 50px;
 }
-.btn1:hover{
+
+.btn1:hover {
     background: white;
     border: 1px solid;
     color: black
 }
-.error{
+
+.error {
     background: #F2DEDE;
     color: #A94442;
     padding: 10px;
-    width: 95%;
+    width: 66%;
     border-radius: 5px;
-    margin: 20px auto;
+    margin: 5px;
+    height: fit-content;
+}
+
+#amh{
+    font-size: smaller;
+}
+
+#btn-error{
+    float:right;
+    background-color: #ccc;
+    color: #fff;
+    border: none;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 0.5px 10px;
+    cursor: pointer;
+    color: red;
 }
