--- a/Hello world/css/log1.css
+++ b/Hello world/css/log1.css
@@ -1,56 +1,89 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-.row{
+
+.row {
     background: white;
     border-radius: 30px;
     box-shadow: 12px 12px 22px black;
 }
-.container{
+
+.container {
+    margin-top: 60px;
     width: 660px;
     height: 800px;
 }
-.div1{
+
+.div1 {
+    margin-top: 10px;
     margin-left: 30px;
     width: 600px;
-    height: 500px;
+    height: 540px;
 }
-img{
+
+#amh{
+    font-size: smaller;
+}
+
+img {
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
 }
-.form-row{
-    margin-left: 40px;
+
+.form-row {
+    margin-left: 120px;
+    padding: 1px;
+    width: 550px;
 }
-.logo{
-    margin-left: 190px;
+
+.logo {
+    margin-left: 230px;
     margin-top: 30px;
 }
-.font-weight-bold{
+
+.font-weight-bold {
     text-align: center;
 }
-.btn1{
+
+.btn1 {
     border: none;
     outline: none;
-    height: 50px;
-    width:100%;
+    height: 40px;
+    width: 60%;
     background-color: #454868;
     color: white;
     border-radius: 4px;
     font-weight: bold;
+    padding: 1px;
+    margin-left: 50px;
 }
-.btn1:hover{
+
+.btn1:hover {
     background: white;
     border: 1px solid;
     color: black
 }
-.error{
+
+.error {
     background: #F2DEDE;
     color: #A94442;
     padding: 10px;
-    width: 95%;
+    width: 67%;
+    height: fit-content;
     border-radius: 5px;
     margin: 20px 0px auto;
+}
+
+#btn-error{
+    float:right;
+    background-color: #ccc;
+    color: #fff;
+    border: none;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 0.5px 10px;
+    cursor: pointer;
+    color: red;
 }
