--- a/Hello world/css/styleQ.css
+++ b/Hello world/css/styleQ.css
@@ -1,106 +1,108 @@
 #header {
-    background: #0A2558;
-    transition: all 0.5s;
-    z-index: 997;
-    padding: 20px 0;
-    height:100px;
-    margin-bottom: 20px;
-    overflow: hidden;
-  }
-  
-  #header .row{
-    margin:8px;
-  }
-  
-  #header .row  h3{
-    font-weight: bold;
-    font-size: 28px;
-    color:white;
-    margin-left:35px;
-    margin-top:-25px;
-    display: inline;
-  }
-  
-  #header .row .btn{
-    text-decoration: none;
-    border: none;
-    outline: none;
-    background-color: white;
-    color: black;
-    border-radius: 4px;
-    font-weight: bold;
-    margin-left:1200px;
-    height:40px; 
-    width:100px;
-    margin-top:-30px;
-    /* margin-right: -200px; */
-  }
-  #header .row .btn:hover{
-    background: white;
-    border: 1px solid;
-    color: #96bbff
-  }
+  background: #0A2558;
+  transition: all 0.5s;
+  z-index: 997;
+  padding: 20px 0;
+  height: 100px;
+  margin-bottom: 20px;
+  overflow: hidden;
+}
 
-  .btn-sub{
-    text-decoration: none;
-    border: none;
-    outline: none;
-    background-color: #0A2558;
-    color: white;
-    border-radius: 4px;
-    font-weight: bold;
-    margin-left:500px;
-    height:35px; 
-    width:300px;
-    padding:5px;
-    margin-bottom:-7px;
-  }
+#header .row {
+  margin: 8px;
+}
 
-  .btn-sub:hover{
-    background: white;
-    border: 1px solid;
-    color: #96bbff
-  }
+#header .row h3 {
+  font-weight: bold;
+  font-size: 28px;
+  color: white;
+  margin-left: 35px;
+  margin-top: -25px;
+  display: inline;
+}
 
-#sec{
+#header .row .btn {
+  text-decoration: none;
+  border: none;
+  outline: none;
+  background-color: white;
+  color: black;
+  border-radius: 4px;
+  font-weight: bold;
+  margin-left: 1200px;
+  height: 40px;
+  width: 100px;
+  margin-top: -30px;
+  /* margin-right: -200px; */
+}
+
+#header .row .btn:hover {
+  background: white;
+  border: 1px solid;
+  color: #96bbff
+}
+
+.btn-sub {
+  text-decoration: none;
+  border: none;
+  outline: none;
+  background-color: #0A2558;
+  color: white;
+  border-radius: 4px;
+  font-weight: bold;
+  margin-left: 500px;
+  height: 35px;
+  width: 300px;
+  padding: 5px;
+  margin-bottom: -7px;
+}
+
+.btn-sub:hover {
+  background: white;
+  border: 1px solid;
+  color: #96bbff
+}
+
+#sec {
   overflow-x: hidden;
 }
 
-#sec form .row{
-    margin-top: -20px;
-    margin-left:50px;
-    margin-right:30px;
-    padding: 30px;
-    border:1;
-    border-radius: 5px;
-  }
-  
-#sec form input, textarea{
-    width: 100%;
-    border: 1px solid #f1e1e1;
-    display: block;
-    padding: 5px 10px;
+#sec form .row {
+  margin-top: -20px;
+  margin-left: 50px;
+  margin-right: 30px;
+  padding: 30px;
+  border: 1;
+  border-radius: 5px;
 }
 
-#sec form .btn1{
-    border: none;
-    outline: none;
-    height: 40px;
-    width:100%;
-    background-color: #454868;
-    color: white;
-    border-radius: 4px;
-    font-weight: bold;
-    margin-top: 11px;
+#sec form input,
+textarea {
+  width: 100%;
+  border: 1px solid #f1e1e1;
+  display: block;
+  padding: 5px 10px;
 }
 
-#sec form .btn1:hover{
+#sec form .btn1 {
+  border: none;
+  outline: none;
+  height: 40px;
+  width: 100%;
+  background-color: #454868;
+  color: white;
+  border-radius: 4px;
+  font-weight: bold;
+  margin-top: 11px;
+}
+
+#sec form .btn1:hover {
   background: white;
   border: 1px solid;
   color: black
 }
 
-.message{
+.message {
   background: #F2DEDE;
   color: #A94442;
   padding: 10px;
@@ -123,34 +125,35 @@
   background: #454868;
   width: 10px;
   margin-left: 20px;
-  text-decoration:none;
+  text-decoration: none;
 }
 
 .btn-update:hover {
   background: #000000;
 }
 
-.modal form .row{
+.modal form .row {
   margin-top: -20px;
-  margin-left:50px;
-  margin-right:30px;
+  margin-left: 50px;
+  margin-right: 30px;
   padding: 30px;
-  border:1;
+  border: 1;
   border-radius: 5px;
 }
 
-.modal form input, textarea{
+.modal form input,
+textarea {
   width: 100%;
   border: 1px solid #f1e1e1;
   display: block;
   padding: 5px 10px;
 }
 
-.modal form .btn1{
+.modal form .btn1 {
   border: none;
   outline: none;
   height: 40px;
-  width:100%;
+  width: 100%;
   background-color: #454868;
   color: white;
   border-radius: 4px;
@@ -158,47 +161,99 @@
   margin-top: 11px;
 }
 
-.modal form .btn1:hover{
-background: white;
-border: 1px solid;
-color: black
+.modal form .btn1:hover {
+  background: white;
+  border: 1px solid;
+  color: black
 }
 
-#view  {
+#view {
   overflow: hidden;
 }
-#view h3{
+
+#view h3 {
   text-align: center;
   margin-top: 100px;
   margin-left: 20px;
 }
 
-#view a{
+#view a {
   text-decoration: none;
   border: none;
   outline: none;
   height: 50px;
-  width:100%;
+  width: 100%;
   background-color: #2b2f52;
   color: white;
   border-radius: 4px;
   font-weight: bold;
   margin-top: 30px;
-  margin-left:680px;
+  margin-left: 680px;
   text-align: center;
   padding: 10px;
   font-size: 18px;
 }
 
-#view a:hover{
-background: white;
-border: 1px solid;
-color: black;
+#view a:hover {
+  background: white;
+  border: 1px solid;
+  color: black;
 }
 
 #up table {
   border-collapse: collapse;
 }
-#up table td,table th {
+
+#up table td,
+table th {
   border: 1px solid #000;
+}
+
+#quest{
+  background-color: #0A2558;
+  color: white;
+  padding: 15px;
+  margin: 10px 0px;
+}
+
+.message {
+  background: #F2DEDE;
+  color: #A94442;
+  padding: 10px;
+  width: 70%;
+  border-radius: 5px;
+  margin: 20px 0px auto;
+}
+
+#btn-msg{
+  float:right;
+  background-color: #ccc;
+  color: #fff;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 0.5px 10px;
+  cursor: pointer;
+  color: red;
+}
+
+.messages {
+  background: #a0e999;
+  color: rgb(8, 122, 8);
+  padding: 10px;
+  width: 70%;
+  border-radius: 5px;
+  margin: 20px 0px auto;
+}
+
+#btn-msgs{
+  float:right;
+  background-color: #ccc;
+  color: #fff;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 0.5px 10px;
+  cursor: pointer;
+  color: rgb(8, 122, 8);
 }
