--- a/Hello world/css/styleR.css
+++ b/Hello world/css/styleR.css
@@ -1,66 +1,73 @@
 #header {
-    background: #0A2558;
-    transition: all 0.5s;
-    z-index: 997;
-    padding: 20px 0;
-    height:100px;
-    margin-bottom: 20px;
-    overflow: hidden;
-  }
-  
-  #header .row{
-    margin:8px;
-  }
-  
-  #header .row  h3{
-    font-weight: bold;
-    font-size: 28px;
-    color:white;
-    margin-left:35px;
-    margin-top:-25px;
-    display: inline;
-  }
-  
-  #header .row .btn{
-    text-decoration: none;
-    border: none;
-    outline: none;
-    background-color: white;
-    color: black;
-    border-radius: 4px;
-    font-weight: bold;
-    margin-left:1200px;
-    height:40px; 
-    width:100px;
-    margin-top:-30px;
-  }
-  #header .row .btn:hover{
-    background: white;
-    border: 1px solid;
-    color: #96bbff
-  }
+  background: #0A2558;
+  transition: all 0.5s;
+  z-index: 997;
+  padding: 20px 0;
+  height: 100px;
+  margin-bottom: 20px;
+  overflow: hidden;
+}
 
-.container{
-    width: 550px;
-    height: fit-content;
-    margin-top: 20px;
-    background: white;
-    border-radius: 30px;
-    box-shadow: 12px 12px 22px black;
+#header .row {
+  margin: 8px;
+}
+
+#header .row h3 {
+  font-weight: bold;
+  font-size: 28px;
+  color: white;
+  margin-left: 35px;
+  margin-top: -25px;
+  display: inline;
+}
+
+#header .row .btn {
+  text-decoration: none;
+  border: none;
+  outline: none;
+  background-color: white;
+  color: black;
+  border-radius: 4px;
+  font-weight: bold;
+  margin-left: 1200px;
+  height: 40px;
+  width: 100px;
+  margin-top: -30px;
+}
+
+#header .row .btn:hover {
+  background: white;
+  border: 1px solid;
+  color: #96bbff
+}
+
+table p {
+  font-size: 16px;
+  color: white;
 }
 
 table {
-    border-collapse: collapse;
-    margin-top: 30px;
-    margin-left: 50px;
+  border-collapse: collapse;
+  width: 50%;
+  margin-top: 10px;
+  margin-left: 300px;
+  margin-right: 30px;
 }
 
-table tr, th, td{
-    padding: 10px;
+th {
+  background-color: #0a2558;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+  padding: 7px;
+  height: 50px;
 }
 
-table p{
-    font-size: 16px;
-    color: #0A2558;
+td {
+  font-size: 14px;
+  padding: 7px;
+  border-bottom: 1px solid #ddd;
+  padding: 7px;
+  font-weight: bold;
 }
-
