--- a/Hello world/css/styleQ.css
+++ b/Hello world/css/styleQ.css
@@ -63,32 +63,29 @@
   color: #96bbff
 }
 
-#sec {
-  overflow-x: hidden;
+#sec{
+  margin-top: 40px;
+  margin-left: 600px;
 }
 
 #sec form .row {
-  margin-top: -20px;
-  margin-left: 50px;
-  margin-right: 30px;
-  padding: 30px;
+  padding: 10px;
   border: 1;
   border-radius: 5px;
 }
 
-#sec form input,
-textarea {
-  width: 100%;
+#sec form input {
   border: 1px solid #f1e1e1;
   display: block;
-  padding: 5px 10px;
+  padding: 10px 10px;
+  width: 300px;
 }
 
 #sec form .btn1 {
   border: none;
   outline: none;
   height: 40px;
-  width: 100%;
+  width: 300px;
   background-color: #454868;
   color: white;
   border-radius: 4px;
